<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay">
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="@string/busid_label" />

            <TextView
                android:id="@+id/busid_text"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="@string/busname_label" />

            <TextView
                android:id="@+id/busname_text"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:ems="10" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#d13033"/>

        <Button
            android:id="@+id/btnRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="right"
            android:text="@string/add_route_button" />

        <Button
            android:id="@+id/btnFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="right"
            android:text="@string/add_fare_button" />

    </LinearLayout>

</RelativeLayout>
