<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/removeAllStops"
                android:text="@string/removeAllStops"/>

        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:visibility="gone"
            android:id="@+id/error_text"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                style="?android:attr/listSeparatorTextViewStyle"
                android:background="@drawable/headergrad"
                android:textSize="18sp"
                android:text="@string/stop_header" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                style="?android:attr/listSeparatorTextViewStyle"
                android:background="@drawable/headergrad"
                android:textSize="18sp"
                android:text="@string/stopname_header" />

        </LinearLayout>

        <ListView
            android:id="@+id/routeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3050d1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Stop Name"
                android:inputType="textShortMessage"
                android:layout_weight="3"/>
        </LinearLayout>

        <Button
            android:id="@+id/addstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/addstop_btn" />

    </LinearLayout>

</RelativeLayout>
